--- a/config/dunst/dunstrc.tmpl
+++ b/config/dunst/dunstrc.tmpl
@@ -11,18 +11,18 @@
     format = "<b>%s</b>\n%b"
 
 [urgency_low]
-    background = "|color0|" # color0
-    foreground = "|color8|" # color8
+    background = "|color0|"
+    foreground = "|color8|"
     timeout = 3
 
 [urgency_normal]
-    foreground = "|color15|" # color15
-    background = "|color4|" # color4
+    foreground = "|color15|"
+    background = "|color4|"
     timeout = 5
 
 [urgency_critical]
-    background = "|color1|" # color1
-    foreground = "|color15|" # color15
-    frame_color = "|color11|" # color11
+    background = "|color1|"
+    foreground = "|color15|"
+    frame_color = "|color11|"
     timeout = 10
 
