modified alacritty default & template configs - borders around content

--- a/config/alacritty/alacritty.yml.tmpl
+++ b/config/alacritty/alacritty.yml.tmpl
@@ -8,6 +8,11 @@ font:
   italic:
     family: MesloLGS NF
 
+window:
+  padding:
+    x: 5
+    y: 5
+
 colors:
   primary:
     background: "|color0|"
