--- a/config/alacritty/alacritty.yml.tmpl
+++ b/config/alacritty/alacritty.yml.tmpl
@@ -1,12 +1,12 @@
 font:
   size: 9.0
   normal:
-    family: MesloLGS NF
+    family: Ubuntu Mono
     style: Medium
   bold:
-    family: MesloLGS NF
+    family: Ubuntu Mono
   italic:
-    family: MesloLGS NF
+    family: Ubuntu Mono
 
 window:
   padding:
